Tue Jan 11 10:50:33 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* configure.in: added python2.4 to the list of accepted
	  versions (bug 163274)

Sun Jan  9 17:04:23 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c: oops previous patch could break build

Sun Jan  9 16:41:59 CET 2005 Daniel Veillard <daniel@veillard.com>

	* configure.in win32/configure.js libxslt/extensions.c
	  libxslt/xsltconfig.h.in libxslt/xsltwin32config.h.in:
	  integrated the module patch from Joel Reed with just a couple
	  of changes and cleanup.

Tue Dec 27 17:50:10 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: fixed a problem with the expression
	  "*//name" (bug 162265), also a small problem with the '|'
	  operator.

Thu Dec 23 16:04:47 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c, libxslt/templates.c: fixed a couple of
	  spots where out-of-memory errors were not detected in time
	  (bug #153660 on OSF/1)
	  
Thu Dec  2 21:10:31 HKT 2004 William Brack <wbrack@mmm.com.hk>

	*doc/xslt.html, doc/downloads.html: changed the download link
	 on the web page for cvs snapshot
	 
Wed Dec  1 22:37:55 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/extensions.c, libxslt/functions.c, libxslt/numbers.c,
	  libxslt/pattern.c, libxslt/transform.c, libxslt/xslt.c,
	  libxslt/xsltInternals.h: minor changes to get rid of gcc
	  warnings, especially on 64-bit system. Implemented
	  XML_CAST_FPTR macro to cast between function pointer <->
	  object pointer while avoiding gcc warnings (a hack).
	  No change to the logic.

Wed Dec  1 10:47:15 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c xsltproc/xsltproc.c: applied patch from
	  Aleksey Gurtovoy moving some stat() definition for Windows
	  to the right place.

Wed Dec  1 14:30:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c: applied patch from Mark Vakoc fixing bug with
	  namespace URI on template names.